[tool.poetry]
name = "claude-engineer"
version = "0.1.0"
description = ""
authors = ["applego <applegorillappa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.32.0"
python-dotenv = "^1.0.1"
tavily-python = "^0.3.5"
pillow = "^10.4.0"
rich = "^13.7.1"
aiohttp = "^3.9.5"
prompt-toolkit = "^3.0.47"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
